--- a/vignettes/03_estimatecvns.Rmd
+++ b/vignettes/03_estimatecvns.Rmd
@@ -21,10 +21,7 @@ bsseq <- loadHDF5SummarizedExperiment(system.file( "hdf5", "se_hdf5", package="C
 segmentation_40K <- copyNumberForRes( bsseq, 40000, BPPARAM=MulticoreParam(5) )
 segmentation_100K <- copyNumberForRes( bsseq, 100000, BPPARAM=MulticoreParam(5) )
 
-
-
-saveRDS( copyNums, file="../output/rds/segmentation_40K.rds" )
-saveRDS( copyNums, file="../output/rds/segmentation_100K_v4.rds" )
-
+## save( segmentation_40K, file="../data/segmentation_40K.RData" )
+## save( segmentation_100K, file="../data/segmentation_100K.RData" )
 
 ```
