--- a/vignettes/01_05_cimpaggregates.Rmd
+++ b/vignettes/01_05_cimpaggregates.Rmd
@@ -182,6 +182,8 @@ boundaries <- boundaries %>%
 
 boundaryInfo <- GRanges( boundaries$chr, IRanges(boundaries$pos, boundaries$pos))
 
+##cexport(boundaryInfo, con="../../boundaryInfo.bed", format="bed")
+
 ```
 
 ```{r, fig.width=1.8, fig.height=2.5}
